// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField should render as disabled 1`] = `
<Fragment>
  <TextField
    className="text-field"
    dense={false}
    disabled={true}
    floatingLabelClassName=""
    fullWidth={false}
    handleValueChange={[Function]}
    isRtl={false}
    label="mock label"
    lineRippleClassName=""
    notchedOutlineClassName=""
    outlined={false}
    textarea={false}
  >
    <Input
      className=""
      disabled={true}
      handleFocusChange={[Function]}
      handleValueChange={[Function]}
      id="mockName"
      inputType="input"
      name="mockName"
      onChange={[Function]}
      setDisabled={[Function]}
      setInputId={[Function]}
      value=""
    />
  </TextField>
  <FormFieldHelperText
    helperText=""
  />
</Fragment>
`;

exports[`TextField should render as full width 1`] = `
<Fragment>
  <TextField
    className="text-field text-field--full-width"
    dense={false}
    floatingLabelClassName=""
    fullWidth={false}
    handleValueChange={[Function]}
    isRtl={false}
    label="mock label"
    lineRippleClassName=""
    notchedOutlineClassName=""
    outlined={false}
    textarea={false}
  >
    <Input
      className=""
      disabled={false}
      handleFocusChange={[Function]}
      handleValueChange={[Function]}
      id="mockName"
      inputType="input"
      name="mockName"
      onChange={[Function]}
      setDisabled={[Function]}
      setInputId={[Function]}
      value=""
    />
  </TextField>
  <FormFieldHelperText
    helperText=""
  />
</Fragment>
`;

exports[`TextField should render with the correct props 1`] = `
<Fragment>
  <TextField
    className="text-field mock-class"
    dense={false}
    floatingLabelClassName=""
    fullWidth={false}
    handleValueChange={[Function]}
    isRtl={false}
    label="mock label"
    lineRippleClassName=""
    notchedOutlineClassName=""
    outlined={false}
    textarea={false}
  >
    <Input
      className=""
      disabled={false}
      handleFocusChange={[Function]}
      handleValueChange={[Function]}
      id="mockName"
      inputType="input"
      name="mockName"
      onChange={[Function]}
      setDisabled={[Function]}
      setInputId={[Function]}
      value=""
    />
  </TextField>
  <FormFieldHelperText
    helperText=""
  />
</Fragment>
`;
